fixing earlier issue of blue flash in mobile while pressing key and display spill

--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -5,8 +5,9 @@
 }
 
 #display {
+    word-break: break-all;
     text-align: right;
-    height: 70px;
+    min-height: 70px;
     line-height: 70px;
     padding: 16px 8px;
     font-size: 25px;
@@ -53,6 +54,7 @@
     }
     .buttons{
         line-height: 12vh;
+        cursor: none;
     }
 
   }
